@@ -3,6 +3,7 @@ Version 2.8 (X X, 2016) - ""
 
 *** CORE/CPU ***
 Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
+Improve DMD brightness level mapping for Gottlieb GTS3s
 
 *** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson
 Kinda new:
